partial/force-app/main/default/objects/Project__c/fields/Facilities__c.field-meta.xml
<CustomField>
    <fullName>Facilities__c</fullName>
    <label>Facilities</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>