partial/force-app/main/default/objects/Project__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <description>Long Term Ownership to Vietnamese
50 years ownership to foreigner</description>
    <label>Ownership</label>
    <type>TextArea</type>
</CustomField>