partial/force-app/main/default/objects/Project__c/fields/Planned_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Handover_Date__c</fullName>
    <label>Planned Handover Date</label>
    <type>Date</type>
</CustomField>