partial/force-app/main/default/objects/Project__c/fields/Project_Address__c.field-meta.xml
<CustomField>
    <fullName>Project_Address__c</fullName>
    <label>Project Address</label>
    <type>Address</type>
</CustomField>