partial/force-app/main/default/objects/Project__c/fields/Project_Id_DB__c.field-meta.xml
<CustomField>
    <fullName>Project_Id_DB__c</fullName>
    <externalId>true</externalId>
    <label>Project Id (DB)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>