partial/force-app/main/default/objects/Project__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property Details</fullName>
            </value>
            <value>
                <fullName>Additional Details</fullName>
            </value>
            <value>
                <fullName>Property Pictures</fullName>
            </value>
            <value>
                <fullName>Define Your Property</fullName>
            </value>
            <value>
                <fullName>Property Description</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>