partial/force-app/main/default/objects/Project__c/fields/Project_Summary__c.field-meta.xml
<CustomField>
    <fullName>Project_Summary__c</fullName>
    <label>Project Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>