partial/force-app/main/default/objects/Project__c/fields/Property_Area__c.field-meta.xml
<CustomField>
    <fullName>Property_Area__c</fullName>
    <description>Size of property in meters</description>
    <label>Property Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>