partial/force-app/main/default/objects/Project__c/fields/Property_Proj_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Proj_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Builder Floor</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>Independent House</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>