partial/force-app/main/default/objects/Project__c/fields/Secondary_Property__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Property</label>
    <type>Checkbox</type>
</CustomField>