partial/force-app/main/default/objects/Project__c/fields/Sponsor_Bank__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Bank__c</fullName>
    <label>Sponsor Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>