partial/force-app/main/default/objects/Project__c/fields/Units_Available__c.field-meta.xml
<CustomField>
    <fullName>Units_Available__c</fullName>
    <label>Units Available</label>
    <summarizedField>Project_Unit_Type__c.No_of_Available_Units__c</summarizedField>
    <summaryForeignKey>Project_Unit_Type__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>