partial/force-app/main/default/objects/Project__c/fields/UnitsAvailability__c.field-meta.xml
<CustomField>
    <fullName>UnitsAvailability__c</fullName>
    <formula>IF(
 Units_Available__c &gt; 0,
&apos;Unit Available&apos;,
IF(
 Units_Available__c = 0 &amp;&amp;  Units_Sold__c &gt; 0,
&apos;All Units Sold&apos;,
&apos;Units Not Uploaded Yet&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units Availability</label>
    <type>Text</type>
</CustomField>