partial/force-app/main/default/objects/Project__c/recordTypes/Secondary_Property.recordType-meta.xml
<RecordType>
    <fullName>Secondary_Property</fullName>
    <active>false</active>
    <label>Secondary Property</label>
</RecordType>