partial/force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Project_Stage__c</columns>
    <columns>Planned_Handover_Date__c</columns>
    <columns>Secondary_Property__c</columns>
    <columns>Project_Address__Street__s</columns>
    <columns>Units_Available__c</columns>
    <columns>Units_Sold__c</columns>
    <columns>UnitsAvailability__c</columns>
    <columns>City__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>